[gd_scene load_steps=3 format=2]

[ext_resource path="res://core/gui/lobby/NewGameLobby.gd" type="Script" id=1]
[ext_resource path="res://core/gui/lobby/UnitLimit.gd" type="Script" id=2]

[node name="Lobby" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -100.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Players" type="HBoxContainer" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 0.9
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_group_": true
}

[node name="PlayerList" type="ItemList" parent="Players"]
margin_right = 191.0
margin_bottom = 450.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3

[node name="Scroll" type="ScrollContainer" parent="Players"]
margin_left = 195.0
margin_right = 768.0
margin_bottom = 450.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="UnitList" type="VBoxContainer" parent="Players/Scroll"]
margin_right = 573.0
margin_bottom = 450.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CreateCharacter" type="Button" parent="."]
anchor_left = 0.2
anchor_top = 0.92
anchor_right = 0.4
anchor_bottom = 0.98
text = "Create character"

[node name="UnitLimit" type="Label" parent="."]
editor/display_folded = true
anchor_left = 0.6
anchor_top = 0.92
anchor_right = 0.95
anchor_bottom = 0.98
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="ReferenceRect" type="ReferenceRect" parent="UnitLimit"]
anchor_right = 1.0
anchor_bottom = 1.0
[connection signal="pressed" from="CreateCharacter" to="." method="onCreateCharacterPressed"]
